# Assignment2

./: .env.template  README.md  Readme.md  app.py  backend.Dockerfile  docker-compose-app.yaml  docker-compose.yaml  frontend.Dockerfile  pyproject.toml  requirements.txt
architecture/: Airflow_pipeline.drawio  StreamlitApp.drawio
backend/: config.py  logging.conf  main.py  utils.py
backend/database/: __init__.py  chat_history.py  chat_session.py  db.py  pdf_extractions.py  users.py
backend/schemas/: chat.py  choices.py  docs.py  users.py
backend/services/: auth.py  auth_bearer.py  chat.py  docs.py  users.py
backend/views/: __init__.py  auth.py  chat.py  choices.py  docs.py  users.py
dags/: db.py  extract.py  pdf_downloader.py  pdf_extractions.py  pipeline.py  upload.py  upload_downloaded_pdfs.py
frontend/: chat.py  home.py  login.py  register.py
frontend/pages/: _bkp_chat.py  chat.py  home.py  user_creation.py  user_login.py
frontend/utils/: chat.py  fs_utils.py
