[tool.poetry]
name = "assignment2"
version = "0.1.0"
description = ""
authors = ["Gopi Krishna <gopigof@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.35"
pydantic-settings = "^2.5.2"
passlib = "^1.7.4"
python-jose = "^3.3.0"
uvicorn = "^0.31.0"
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
openai = "^1.51.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
